# SoftwareProject

./: .gitignore  CMakeLists.txt  README.md  powerIteration.c  powerIteration.h  spmatArray.h  spmatList.c  spmatList.h
hw1/: CMakeLists.txt  cov.c  eigen.c
hw1/files/: input_matrix  input_matrix_eigen
hw2/: main.c  spmat.c  spmat.h  spmatList.c  spmatList.h
project/: BMatrixFunctions.c  BMatrixFunctions.h  CMakeLists.txt  cluster.c  divideIntoGroups.c  divideIntoGroups.h  divideIntoTwo.c  divideIntoTwo.h  error_handler.h  group.c  group.h  makefile  matrixShifting.c  matrixShifting.h  matrixStructure.c  matrixStructure.h  modularityGroups.c  modularityGroups.h  modularityMaximization.c  modularityMaximization.h  powerIteration.c  powerIteration.h  spmatArray.c  spmatArray.h  spmatList.h
